# ffxiv-broker

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  hell -Command git status  pyproject.toml
.github/workflows/: ci.yml
broker/: config.py  logging.py
broker/api/: main.py
broker/api/routes/: advice.py  catalog.py  craft.py  dashboard.py  export.py  health.py  market.py
broker/api/static/css/: dashboard.css  main.css
broker/api/static/js/: advice.js  charts.js  dashboard.js  main.js
broker/api/templates/: base.html  dashboard.html  market.html  portfolio.html
broker/clients/: universalis.py  xivapi.py
broker/db/: cache.py
broker/exporters/: excel.py
broker/jobs/: refresh.py
broker/models/: market.py  recipe.py
broker/services/: advisor.py  craft.py  metrics.py
data/: catalog_names_en.csv  catalog_names_en.json  ffxiv_market_dataset.xlsx  test_dataset.csv
docker/: Dockerfile
scripts/: build_catalog.py  collect_dataset.py  create_excel_dataset.py  dev.ps1  export_catalog.py  lint.ps1  list_missing_names.py  run_dataset_collection.ps1  test.ps1  test_dataset.py
tests/: conftest.py  test_advice_api.py  test_advice_batching.py  test_clients_universalis.py  test_craft.py  test_dashboard_overview.py  test_market_arbitrage.py  test_market_batch.py  test_metrics.py
